--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -68,6 +68,7 @@ header {
   margin-right: 0.2rem;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 #account-name {
@@ -75,6 +76,7 @@ header {
   font-weight: 500;
   font-size: 1.1rem;
   margin-right: 1rem;
+  cursor: pointer;
 }
 
 .logout-btn {
